fixed in build.gradle files